# ifcbtools

./: .gitignore  LICENSE  README.md  pyproject.toml
.codex/environments/: environment.toml
R/community.variability/: DESCRIPTION
R/community.variability/R/: bootstrap.R  community_metrics.R  leave_one_out.R  variability.R
analysis/community-variability/: README.md
analysis/community-variability/R/: README.md  install_analysis_scripts.R
analysis/community-variability/R/scripts/: ifcb_common.R  ifcb_power_analysis.R  ifcb_seasonal_comparison.R  ifcb_sensitivity_analysis.R  ifcb_single_season.R
analysis/community-variability/matlab/: README.md  install_analysis_path.m  install_analysis_scripts.m
analysis/community-variability/matlab/scripts/: ifcb_common.m  ifcb_power_analysis.m  ifcb_seasonal_comparison.m  ifcb_sensitivity_analysis.m  ifcb_single_season.m
analysis/community-variability/python/: README.md  install_analysis_scripts.py
analysis/community-variability/python/scripts/: ifcb_common.py  ifcb_power_analysis.py  ifcb_seasonal_comparison.py  ifcb_sensitivity_analysis.py  ifcb_single_season.py
analysis/community-variability/scripts/: ifcb_common.py  ifcb_power_analysis.R  ifcb_power_analysis.py  ifcb_seasonal_comparison.R  ifcb_seasonal_comparison.py  ifcb_sensitivity_analysis.R  ifcb_sensitivity_analysis.py  ifcb_single_season.R  ifcb_single_season.py
analysis/topic-modeling/: topic_modeling_simple.ipynb
community.variability/: README.md
community.variability/R/: README.md
community.variability/R/community.variability/: DESCRIPTION  LICENSE  NAMESPACE
community.variability/R/community.variability/R/: bootstrap.R  community_metrics.R  community_plots.R  leave_one_out.R  nmds.R  variability.R
community.variability/matlab/: README.md  install_community_variability.m
community.variability/matlab/community_variability/: README.md  add_baseline_delta.m  bd_alpha.m  bd_gamma.m  bd_phi.m  bd_spatial_weighted.m  bootstrap_by_dimension.m  calc_metacommunity_metrics.m  cv_alpha.m  cv_gamma.m  cv_phi.m  leave_one_out.m  make_community_array.m  spatial_bd_by_time.m
community.variability/python/: README.md  pyproject.toml
community.variability/python/community_variability/: __init__.py  bootstrap.py  community_metrics.py  core.py  leave_one_out.py  variability.py
ifcb-export/: README.md  pyproject.toml
ifcb-export/matlab/: README.md  export_ifcb.m
ifcb-export/python/ifcb/: __init__.py  add.py  clean.py  fill.py  process.py  stations.py  taxonomy.py
ifcb-export/tests/: test_clean.py  test_fill.py  test_process.py  test_taxonomy.py
ifcb.process/: README.md  pyproject.toml
ifcb.process/matlab/: README.md  export_ifcb.m  export_ifcb_mat.m  install_ifcb_process_export.m
ifcb.process/python/ifcb/: __init__.py
ifcb.process/python/ifcb/process/: __init__.py  logging_utils.py
ifcb.process/python/ifcb/process/neslter/: __init__.py  casts.py  cli.py  fill.py  metadata.py  normalize.py  pipeline.py  process.py  stations.py  taxonomy.py
ifcb.process/tests/: test_cli.py  test_metadata.py  test_normalize.py  test_taxonomy.py
matlab/: export_ifcb_mat.m
python/ifcb/: __init__.py
python/ifcb/neslter/: __init__.py  casts.py  cli.py  community_variability.py  fill.py  pipeline.py  process.py  taxonomy.py
scripts/matlab/: export_ifcb_mat.m
src/ifcb/neslter/: constants.py  process.py  stations.py
src/ifcb_neslter/: __init__.py  casts.py  cli.py  constants.py  metadata.py  pipeline.py  stations.py  taxonomy.py
