[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifcb.process"
version = "0.1.0"
description = "NES-LTER IFCB data processing tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Huy Anh Pham", email = "huy.pham@whoi.edu" }]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "geopy>=2.4",
  "tqdm>=4.66",
]

[project.scripts]
ifcb-fill-missing = "ifcb.process.neslter.fill:main"
ifcb-process = "ifcb.process.neslter.cli:main"

[project.urls]
Repository = "https://github.com/anhph95/ifcbtools"

[tool.setuptools.packages.find]
where = ["python"]
