[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "community-variability"
version = "0.1.0"
description = "Metacommunity variability metrics for time x site x taxon arrays"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Huy Anh Pham", email = "huy.pham@whoi.edu" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.urls]
Repository = "https://github.com/anhph95/ifcbtools"

[tool.setuptools.packages.find]
where = ["."]
